# battery_sipjuice

./: .gitignore  LICENSE  NOTICE  README.md  README.zh-CN.md  gen_icons.py  package-lock.json  package.json
.github/release-notes/: v0.5.0.md
.github/workflows/: linux-packages.yml  linux-x64-packages.yml
scripts/: bump-version.mjs  generate-icons.mjs  render-readme-screenshots.py
src/: formatters.js  i18n.js  index.html  insights.js  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_power.rs  battery.rs  charge_control.rs  commands.rs  cpu_power.rs  history.rs  insights.rs  lib.rs  main.rs  power.rs  reminder.rs  settings.rs  system_accent.rs
