[package]
name = "battery-assistant"
version = "0.1.0"
description = "电源助手 — Linux 电池监控与健康管理"
authors = ["battery_assistant"]
license = "MIT"
edition = "2021"

[lib]
name = "battery_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
