[package]
name = "battery-sipjuice"
version = "0.4.1"
description = "Battery SipJuice — Linux 电池监控与健康管理"
authors = ["EmberLuo"]
license = "Apache-2.0"
repository = "https://github.com/EmberLuo/battery_sipjuice"
edition = "2021"

[lib]
name = "battery_sipjuice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
